<resources>
    <string name="app_name">FudoProx</string>
    <string name="get_start">Get Started</string>
    <string name="brokerLogin">Agent</string>
    <string name="sellerLogin">Seller</string>
    <string name="logoDiscription">Your platform for secure and efficient real estate transactions</string>
    <string name="continue_as">Continue as</string>
    <string name="login_header">Login</string>
    <string name="signup_header">Signup</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="hint_email">Email</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_brn">Business Reg No</string>
    <string name="hint_nic">Nic</string>
    <string name="hint_address">Address</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_pwd">Password</string>
    <string name="hint_cpwd">Confirm Password</string>
    <string name="dont_have_account">Don\'t have an account? SignUp</string>
    <string name="create_account">Create account</string>
    <string name="do_have_account">Already have an account? Login</string>
    <string name="bottomNav">Bottom Navigation</string>
    <string name="navHome">Home</string>
    <string name="navSearch">Search</string>
    <string name="navAdd">Add</string>
    <string name="navList">List</string>
    <string name="navProfile">Profile</string>
    <string name="item_header">4bedRooms, 3Bathrooms</string>
    <string name="item_det1">Rs.5.5 million</string>
    <string name="item_det2">2000 sqF</string>
    <string name="item_det3">Ambalangoda</string>
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="user_name">Victoria Robertson</string>
    <string name="user_email">victoria@gmail.com</string>
    <string name="user_edit_profile">Edit Profile</string>
    <string name="user_cat_header">My Properties</string>
    <string name="content_des_img">This is dummy image</string>
    <string name="recent_card_header">4 Bedrooms....</string>
    <string name="recent_card_price">Rs.5.5 milions</string>
    <string name="recent_card_area">2000 sqF</string>
    <string name="recent_card_location">Colombo</string>
    <string name="search_header1">Recent searches</string>
    <string name="search_header2">Catagories</string>
    <string name="catagory1">Ready Home Plots</string>
    <string name="catagory2">Rental Residences</string>
    <string name="catagory3">Pure Land Properties</string>
</resources>