<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottom_home"
        android:icon="@drawable/home_black_24dp"
        android:title="@string/navHome"/>

    <item
        android:id="@+id/bottom_search"
        android:icon="@drawable/search_black_24dp"
        android:title="@string/navSearch"/>

    <item
        android:id="@+id/bottom_add"
        android:icon="@drawable/add_circle_outline_black_24dp"
        android:title="@string/navAdd"/>

    <item
        android:id="@+id/bottom_list"
        android:icon="@drawable/list_black_24dp"
        android:title="@string/navList"/>

    <item
        android:id="@+id/bottom_profile"
        android:icon="@drawable/account_circle_black_24dp"
        android:title="@string/navProfile"/>
</menu>