<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentSignupActivity"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/singup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="75dp"
                android:fontFamily="@font/open_sans_semibold"
                android:padding="5dp"
                android:text="@string/signup_header"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_fullname"
                android:inputType="text"
                android:padding="5dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="5dp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_phone"
                android:inputType="number"
                android:padding="5dp" />

            <EditText
                android:id="@+id/regNo"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_brn"
                android:inputType="text"
                android:padding="5dp" />

            <EditText
                android:id="@+id/nic"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_nic"
                android:inputType="text"
                android:padding="5dp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_address"
                android:inputType="text"
                android:padding="5dp" />

            <EditText
                android:id="@+id/pwd"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_pwd"
                android:inputType="textPassword"
                android:padding="5dp" />

            <EditText
                android:id="@+id/cpwd"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_rounded_corner_background"
                android:ems="10"
                android:fontFamily="@font/open_sans"
                android:hint="@string/hint_cpwd"
                android:inputType="textPassword"
                android:padding="5dp" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/Darkblue"
                android:fontFamily="@font/open_sans_bold"
                android:onClick="login"
                android:padding="5dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/orTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/open_sans"
                android:padding="5dp"
                android:text="or" />

            <Button
                android:id="@+id/lgGoogleBtn"
                style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:backgroundTint="@color/black"
                android:drawableStart="@drawable/google_logo"
                android:fontFamily="@font/open_sans_bold"
                android:onClick="login"
                android:text="@string/sign_up_with_google"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/ash" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/haveAcc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="100dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center"
                    android:onClick="login"
                    android:padding="5dp"
                    android:text="@string/do_have_account"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>