<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:padding="5dp"
        android:text="@string/signup_header"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_rounded_corner_background"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hint_fullname"
        android:inputType="text"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singup" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_rounded_corner_background"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_rounded_corner_background"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hint_phone"
        android:inputType="number"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/pwd"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_rounded_corner_background"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Darkblue"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="buttonClick"
        android:padding="5dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd" />

    <TextView
        android:id="@+id/orTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/open_sans"
        android:padding="5dp"
        android:text="or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />


    <Button
        android:id="@+id/lgGoogleBtn"
        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
        android:layout_width="300dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/black"
        android:drawableStart="@drawable/google_logo"
        android:fontFamily="@font/open_sans_bold"
        android:onClick="buttonClick"
        android:text="@string/sign_up_with_google"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orTag"
        app:layout_constraintVertical_bias="0.061" />

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="1dp"
        android:background="@color/ash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lgGoogleBtn"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/haveAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/open_sans"
        android:onClick="buttonClick"
        android:padding="5dp"
        android:text="@string/do_have_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>